# vkui

./: .clang-format  .gitignore  :w  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: .build.yml.swp  build.yml
data/font/Glyphs/: GlyphRange_JPN.csv  Icon.csv
data/font/glyphRangeCreator/: icon_creator.cpp  output.txt  string_codeglyph_checker.cpp
data/shaders/: build.sh  frag_ui.spv  shader.frag  shader.vert  shader_ui.frag  shader_ui.vert  vert.spv  vert_ui.spv
examples/: CMakeLists.txt  gl_simple.cpp  main.cpp  widget_test.cpp
include/: IO.hpp  drawdata.hpp  engine.hpp  enums.hpp  icon.hpp  logger.hpp  uiCamera.hpp  widget.hpp
include/gl/: internal.hpp
include/vk/: internal.hpp
include/widgets/: basic.hpp  basic_2d.hpp  lagori_viewer.hpp
src/: IO.cpp  buffer.cpp  drawdata.cpp  engine.cpp  uifont.cpp  window.cpp
src/gl/: internal.cpp
src/vk/: buffer.cpp  internal.cpp
src/widget/: basic_2d.cpp  lagori_viewer.cpp  plot.cpp
vkui/: IO.cpp  drawdata.hpp  engine.cpp  engine.hpp  enums.hpp  logger.hpp
vkui/gl/: internal.cpp  internal.hpp
vkui/vk/: internal.cpp  internal.hpp
vkui/widgets/: basic.hpp  basic_2d.hpp  plot.hpp
